<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DTSC STDET Android</string>
    <string name="menu_CheckScanner">Check Scanner</string>
    <string name="menu_SelectScanner">Select Scanner</string>
    <string name="menu_DownloadData">Download Lookup Tables</string>
    <string name="menu_UploadLookupData">Upload Lookup Tables From Files</string>
    <string name="barcode">Barcode</string>
    <string name="txtInfo">txtInfo</string>
    <string name="btnInputForms">Input</string>
    <string name="btnAutomaticBarcode">Automatic Control</string>
    <string name="btnClientBarcode">Client Control</string>
    <string name="btnUploadReadings">Upload Data</string>
    <string name="btnScannerSelectBarcode">Scanner Selection Example</string>
    <string name="btnSwitchScanners">Switch Scanners</string>
    <string name="btnDownloadData">Download and Populate Lookup DB</string>
    <string name="btnUploadXMLtoDB">Populate Lookup DB</string>
    <string name="btnCheckConnectivity">Check Login Credentials</string>
    <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
    <string name="txtMainTitle">Click on a button below to proceed</string>
    <string name="textInfo">Info</string>
    <string name="title_activity_with_fragment">ActivityWithFragment</string>
    <string name="action_settings">Settings</string>
    <string name="data_collector_id">Data Collector Id:</string>
    <string name="comment">Comment</string>
    <string name="loc_id">Loc Id:</string>
    <string name="na">NA</string>
    <string name="done">Done</string>
    <string name="_0_0"></string>
    <string name="Max_Depth">Max Depth</string>
    <string name="save">Save</string>
    <string name="reading">Reading:</string>
    <string name="oper_status">Oper Status</string>
    <string name="equip_status">Equip Status</string>
    <string name="elev_code">Elev Code</string>
    <string name="comment1"></string>
    <string name="clear">Clear</string>
    <string name="na1">NA</string>


    <string name="row2">row2</string>
    <string name="row3">row3</string>
    <string name="row4">row4</string>
    <string name="row5">row5</string>
    <string name="row6">row6</string>
    <string name="row7">row7</string>
    <string name="row8">row8</string>
    <string name="row9">row9</string>
    <string name="row10">row10</string>
    <string name="row11">row11</string>
    <string name="Login">Login Info</string>
    <string name="menu_LoginInfo">Upload File Login Information</string>
    <string name="user_name">User Name</string>
    <string name="username">UserName</string>
    <string name="copy_data_to_sd_card">Copy Data to SD Card</string>
    <string name="EditData">Edit Data</string>
    <string name="btnReviewReadings">Edit Readings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Update">Update</string>
    <string name="Cancel">Cancel</string>

    <color name="white">#FFFFFF</color>
    <color name="greenblue1">#76a3a3</color>
    <color name="lightblue">#e3eded</color>
    <color name="brightblue">#85CAE6</color>
</resources>
