<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StDetInputActivity"
    android:id="@+id/txt_Header"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tbl_layout"
        android:background="#e3eded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/lbl_COL_ID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/data_collector_id"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_COL_ID"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:gravity="center_vertical"
                android:scrollbarStyle="insideInset"
                android:spinnerMode="dropdown"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/lbl_Loc_Id"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/loc_id"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_Loc_id"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dialog"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/txt_Loc_desc"
                android:background="@drawable/border"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp" />
        </TableRow>


        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <TextView
                android:id="@+id/lbl_FacOper"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elegantTextHeight="true"
                android:gravity="center_vertical"
                android:text="@string/oper_status" />

            <Spinner
                android:id="@+id/spin_Fac_oper"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/lbl_EqStatus"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equip_status" />

            <Spinner
                android:id="@+id/spin_Eq_oper"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />


        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/lbl_elev_code"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/elev_code" />

            <Spinner
                android:id="@+id/spin_elev_code"
                android:layout_width="114dp"
                android:layout_height="40dp"
                android:background="@drawable/custom_spinner_background"
                android:gravity="center_vertical"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row8"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:id="@+id/lbl_elev_code_desc"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:text="@string/na1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_depth"
                android:layout_width="50dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/border"
                android:inputType="text"
                android:minHeight="40dp"
                android:selectAllOnFocus="true"
                android:text="@string/Max_Depth"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row9"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/lbl_Reading"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/reading"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_Reading"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:inputType="text"
                               android:minHeight="36dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"             />

            <Spinner
                android:id="@+id/spin_Unit"
                android:background="@drawable/custom_spinner_background"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row10"
            android:layout_width="match_parent"
            android:layout_height="21dp">

            <TextView
                android:id="@+id/lbl_Comment"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/comment1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_Comment"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_marginLeft="2dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="text"
                android:text="@string/comment" />
        </TableRow>

        <TableRow
            android:id="@+id/row11"
            android:layout_width="match_parent"
            android:layout_height="21dp">

            <Button
                android:id="@+id/btn_Manual"
                style="@style/Widget.AppCompat.Button"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/manual" />

            <Button
                android:id="@+id/btn_save"
                style="@style/Widget.AppCompat.Button"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.AppCompat.Button"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btn_done"
                style="@style/Widget.AppCompat.Button"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/done" />
        </TableRow>

        <ListView
            android:id="@+id/listViewBarcodeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"></ListView>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>